frontend/styles/gantt.css
.gantt-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 100%;
    height: 100%;
    overflow: hidden;
}

.gantt-title {
    margin: 8px;
}

.gantt-checkbox-container {
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: 16px;
    min-width: 550px;
    margin-bottom: 8px;

    @media (max-width: 768px) {
        gap: 8px;
        min-width: 300px;
        margin-bottom: 4px;
    }
}

.gantt-select-container {
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: 16px;

    @media (max-width: 768px) {
        gap: 8px;
        margin-bottom: 4px;
    }
}

.gantt-loading {
    display: none;
}

.gantt-content {
    display: none;
    width: 100%;
    padding: 16px;
}

.gantt-row {
    display: flex;
    flex-direction: row;
    gap: 16px;
    align-items: center;
    height: 28px;
    padding: 0 16px;
    border: 1px solid #e0e0e0;
}

.gantt-row-title {
    width: 300px;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

.gantt-row-timeline {
    display: flex;
    flex-direction: row;
    height: 16px;
}

.gantt-tile {
    width: 16px;
    height: 16px;
    border: 1px solid #eef1f0;
    box-sizing: border-box;
    background-color: #fafcfd;
}
.gantt-tile:hover {
    background-color: pink;
}

.gantt-tile-active {
    width: 16px;
    height: 16px;
    border: 1px solid #eef1f0;
    box-sizing: border-box;
}

.gantt-prevdays-state {
    display: none;
}

